fixed on click btn function

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 			<div class="btnCon">
 				<h2>Submit Survey</h2>
-				<input type="submit" value="Submit">
+				<input type="submit" value="Submit" id="subBtn">
 			</div>
 
 			<div class="progBarCon">
